[package]
name = "oasis-module-bridge"
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
# TODO: Use a specific tag.
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", branch = "main" }

# Third party.
serde = { version = "1.0.118", features = ["derive"] }
serde_bytes = "0.11.5"
thiserror = "1.0"
lazy_static = "1.4.0"
slog = "2.7.0"
hex = "0.4.2"
